kanc/src/tests/sample_code/should_succeed/multi_file/no_warnings/stdlib/src/time.k
use super.num.data.Nat;

pub type Time {
    time(millis_since_epoch: Nat): Time,
}
