kanc/src/tests/sample_code/should_fail/single_file/type_check/illegal_type/variant_param.k
type U {
    .u: U,
}

type Foo {
    .bar(x: U.u): Foo,
}
